--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -303,8 +303,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "Address",
         "locations":
           [ { "lineno": 323,
@@ -487,8 +486,7 @@
                     [ "coupon",
                       "discountRule",
                       "merchantDiscount" ] } ] },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "AppliedDiscountsCoupon",
         "locations":
           [ { "lineno": 401,
@@ -604,8 +602,7 @@
                   "members":
                     [ "memberId",
                       "visitorId" ] } ] },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "CatalogReference",
         "locations":
           [ { "lineno": 172,
@@ -761,8 +758,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "CreatedBy",
         "locations":
           [ { "lineno": 501,
@@ -1254,8 +1250,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "OrderLineItem",
         "locations":
           [ { "lineno": 135,
@@ -1321,7 +1316,7 @@
               "optional": true },
             { "name": "restockQuantity",
               "type": "number",
-              "doc": "Quantity of inventory requested to be returned.",
+              "doc": "Quantity of inventory refunded or canceled to be restocked.",
               "optional": true },
             { "name": "subscriptionInfo",
               "type": "ecom-payment-settings.SubscriptionInfo",
@@ -1349,7 +1344,8 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels": [] },
+        "labels":
+          [ "changed" ] },
       { "name": "OrderRefunded",
         "locations":
           [ { "lineno": 484,
@@ -1413,8 +1409,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "PaymentSettings",
         "locations":
           [ { "lineno": 68,
@@ -1655,8 +1650,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "PriceSummaryAmounts",
         "locations":
           [ { "lineno": 307,
@@ -1771,8 +1765,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "StreetAddress",
         "locations":
           [ { "lineno": 336,
@@ -1870,8 +1863,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "TaxSummaryAmounts",
         "locations":
           [ { "lineno": 375,
