DocWorks for ecom-payment-settings - 1 change detected, but 2 issue detected changes: Service ecom-payment-settings message OrderLineItem member restockQuantity has changed doc
issues:
Message DeliveryLogistics has an unknown property type payment-settings.PickupDetails (payment-settings-spi.js (599))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1316,7 +1316,7 @@
               "optional": true },
             { "name": "restockQuantity",
               "type": "number",
-              "doc": "Quantity of inventory refunded or canceled to be restocked.",
+              "doc": "Quantity of inventory refunded or [canceled](https://www.wix.com/velo/reference/wix-ecom-backend/orders/cancelorder) to be restocked.",
               "optional": true },
             { "name": "subscriptionInfo",
               "type": "ecom-payment-settings.SubscriptionInfo",
