--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1,6 +1,7 @@
 { "name": "ecom-payment-settings",
   "mixes": [],
-  "labels": [],
+  "labels":
+    [ "changed" ],
   "location":
     { "lineno": 1,
       "filename": "payment-settings-spi-index.js" },
@@ -22,7 +23,7 @@
           "Currently, the only payment setting available to customize is whether to apply 3DS to an order. If 3DS is required, the customer will have to pass an additional ",
           "layer of security before completing their payment. For example, they will have to pass a window like this before continuing:",
           "",
-          "![3DS popup](..assets/images/3DS.png \"3DS popup\")",
+          "![3DS popup](.assets/images/3DS.png \"3DS popup\")",
           "",
           "## Configuration",
           "Adding a custom extension to your site has 3 steps:",
