--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -21,7 +21,7 @@
           "to confirm which payment settings they have implemented as part of their Wix integration.",
           "",
           "Currently, the only payment setting available to customize is whether to apply 3DS to an order. If 3DS is required, the customer will have to pass an additional ",
-          "layer of security before completing their payment. For example, they will have to pass a window like this before continuing:",
+          "layer of security before completing their payment. For example:",
           "",
           "![3DS popup](..assets/images/3ds.png \"3DS popup\")",
           "",
