--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -75,7 +75,7 @@
                 "function fails. When `fallbackValueForRequires3dSecure` is set to `true`, then in a case where the SPI call fails it will, by default, ",
                 "return `paymentSettings.requires3dSecure` set to `true` which tells the payment provider to require 3DS for the order.",
                 "",
-                "For a step-by-step tutorial, see [Tutorial: Payment Settings Custom Extension](https://support.wix.com/en/article/tutorial-payment-settings-custom-extension)." ],
+                "For a step-by-step tutorial, see [Tutorial: Payment Settings Custom Extension](https://dev.wix.com/docs/develop-websites/articles/wix-apps/wix-e-commerce-stores/tutorial-payment-settings-custom-extension)." ],
             "links": [],
             "examples":
               [ { "title": "Example of an `spi-config.js` file",
@@ -124,7 +124,7 @@
                 "to an order. Note that if the code fails then `requires3dSecure` sets to the value for `fallbackValueForRequires3dSecure` set in ",
                 "[`getConfig()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getconfig).",
                 "",
-                "See [Tutorial: Payment Settings Custom Extension](https://support.wix.com/en/article/tutorial-payment-settings-custom-extension) ",
+                "See [Tutorial: Payment Settings Custom Extension](https://dev.wix.com/docs/develop-websites/articles/wix-apps/wix-e-commerce-stores/tutorial-payment-settings-custom-extension) ",
                 "for a step-by-step tutorial." ],
             "links": [],
             "examples":
