DocWorks for ecom-payment-settings - 2 changes detected, but 1 issue detected changes: Service ecom-payment-settings operation getConfig has changed description Service ecom-payment-settings operation getPaymentSettings has changed description
issues:
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -71,7 +71,7 @@
                 "function fails. When `fallbackValueForRequires3dSecure` is set to `true`, then in a case where the SPI call fails it will, by default, ",
                 "return `paymentSettings.requires3dSecure` set to `true` which tells the payment provider to require 3DS for the order.",
                 "",
-                "### Where to add this function",
+                "### Where to add the `getConfig()` function",
                 "When you [add the Payment Settings custom extension](https://dev.wix.com/docs/develop-websites/articles/wix-apps/wix-e-commerce-stores/tutorial-payment-settings-custom-extension#step-1-create-a-new-payment-settings-extension), ",
                 "it automatically adds a folder to your site. This folder contains two files, **<my-extension-name\\>-config.js** and ",
                 "**<my-extension-name\\>.js**. Use the first of these files, **<my-extension-name\\>-config.js**, to set any default configurations for your implementation of the custom extension.",
@@ -123,7 +123,7 @@
                 "to an order. Note that if the code fails then `requires3dSecure` sets to the value for `fallbackValueForRequires3dSecure` set in ",
                 "[`getConfig()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getconfig).",
                 "",
-                "### Where to add this function",
+                "#### Where to add",
                 "When you [add the Payment Settings custom extension](https://dev.wix.com/docs/develop-websites/articles/wix-apps/wix-e-commerce-stores/tutorial-payment-settings-custom-extension#step-1-create-a-new-payment-settings-extension), ",
                 "it automatically adds a folder to your site. This file contains 2 files, **<my-extension-name\\>-config.js** and ",
                 "**<my-extension-name\\>.js**. Use the second of these files, **<my-extension-name\\>.js**, to write the code to determine which payment settings to apply to an order. ",
